--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #333;
+  background-color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,14 +17,15 @@ body {
 #calc {
   width: 400px;
   padding: 0.7em;
-  background-color: #c4c4c4;
-  color: #000;
+  background-color: #000000;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
 }
 
 #calc h3 {
   font-weight: 300;
+  font-size: 2em;
   color: #666;
 }
 
@@ -47,7 +48,7 @@ body {
   overflow-wrap: break-word;
 }
 
-#buttons-container {
+.buttons-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 1em;
@@ -55,7 +56,7 @@ body {
   align-self: center;
 }
 
-#buttons-container button {
+.buttons-container button {
   border-radius: 50%;
   border: 1px solid transparent;
   height: 3em;
@@ -63,4 +64,36 @@ body {
   font-size: 3em;
   font-weight: 100;
   margin: 0;
+  cursor: pointer;
+  color: white;
+}
+
+.buttons-container .number {
+  background-color: #444444;
+}
+
+.buttons-container .number:hover {
+  background-color: #787878;
+}
+
+.buttons-container .operator {
+  background-color: #ff9f0a;
+}
+
+.buttons-container .operator:hover {
+  background-color: #ffba42;
+}
+
+.buttons-container .erase {
+  background-color: #777;
+}
+
+.buttons-container .erase:hover {
+  background-color: #b3b3b3;
+}
+
+.buttons-container #equal-button {
+  grid-column: span 2;
+  width: 6.4em;
+  border-radius: 2em;
 }
